WIP: static resources are permit all.